--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -27,4 +27,10 @@
     \end{abstract}
     \section{Introduction}
     \input{intro.tex}
+    \section{C Language}
+    \input{lang.tex}
+    \section{Why C}
+    \input{whyC.tex}
+    \section{Our Work}
+    \input{work.tex}
 \end{document}
