Updates from Overleaf

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -22,7 +22,7 @@
     \maketitle  
     \begin{abstract}
         Aim of this project is to implement a compiler for the 
-        c language, which supports loos, if-else, function calls 
+        C language, which supports loos, if-else, function calls 
         and recursions.
     \end{abstract}
     \section{Introduction}
