Updates from Overleaf

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -13,18 +13,18 @@
 \author{Nisarg Ujjainkar}
 \affil{16110102}
 
-\author{Vinu S. Sankar}
+\author{S. Vinu Sankar}
 \affil{16110143}
 
 \title{Compilers Project Proposal}
 
 \begin{document}
     \maketitle  
-    \begin{abstract}
-        Aim of this project is to implement a compiler for the 
-        C language, which supports loos, if-else, function calls 
-        and recursions.
-    \end{abstract}
+    % \begin{abstract}
+    %     Aim of this project is to implement a compiler for the 
+    %     C language, which supports loos, if-else, function calls 
+    %     and recursions.
+    % \end{abstract}
     \section{Introduction}
     \input{intro.tex}
     \section{C Language}
