--- a/proposal/intro.tex
+++ b/proposal/intro.tex
@@ -1,1 +1,1 @@
-Hello World
+In this project, we would like to build a basic compiler for the language C. Aim of the project is to successfully build a compiler that can compile C programs with basic functionalities such as loops, conditional statements, etc.
