Updates from Overleaf

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -16,7 +16,7 @@
 \author{S. Vinu Sankar}
 \affil{16110143}
 
-\title{Compilers Project Proposal}
+\title{Compilers Project Proposal -- A basic compiler for C}
 
 \begin{document}
     \maketitle  
@@ -27,9 +27,9 @@
     % \end{abstract}
     \section{Introduction}
     \input{intro.tex}
-    \section{C Language}
-    \input{lang.tex}
-    \section{Why C}
+    % \section{C Language}
+    % \input{lang.tex}
+    \section{Why C?}
     \input{whyC.tex}
     \section{Our Work}
     \input{work.tex}
