--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -7,19 +7,31 @@
 
 \bibliographystyle{acm}
 
-\author{Kshitij Gajapure}
-\affil{16110055}
+% \author{Kshitij Gajapure}
+% \affil{16110055}
 
-\author{Nisarg Ujjainkar}
-\affil{16110102}
+% \author{Nisarg Ujjainkar}
+% \affil{16110102}
 
-\author{S. Vinu Sankar}
-\affil{16110143}
+% \author{S. Vinu Sankar}
+% \affil{16110143}
 
-\title{Compilers Project Proposal -- A basic compiler for C}
+%\title{Compilers Project Proposal -- A basic compiler for C}
+\dochead{Compilers Project Proposal}
+
+\runningtitle{A Basic Compiler For C}
 
 \begin{document}
-    \maketitle  
+    \title{A Basic Compiler For C}
+    \author{Kshitij Gajapure}
+    \affil{16110055}
+
+    \author{Nisarg Ujjainkar}
+    \affil{16110102}
+
+    \author{S. Vinu Sankar}
+    \affil{16110143}
+    \maketitle
     % \begin{abstract}
     %     Aim of this project is to implement a compiler for the 
     %     C language, which supports loos, if-else, function calls 
@@ -29,7 +41,7 @@
     \input{intro.tex}
     % \section{C Language}
     % \input{lang.tex}
-    \section{Why C?}
+    \section{C Programming Language and its Advantages}
     \input{whyC.tex}
     \section{Our Work}
     \input{work.tex}
