--- a/proposal/work.tex
+++ b/proposal/work.tex
@@ -1,1 +1,4 @@
-We plan to code our compiler using C. This means that our compiler could be compiled by itself. Also, we plan to use Flex for generating lexical analyzers and Bison for generating parsers.
+We plan to code our compiler using C. This means that our compiler 
+could be compiled by itself. Also, we plan to use Flex for generating 
+lexical analyzers and Bison for generating parsers. We would use the qemu
+emulator to test our compiler.
