--- a/proposal/whyC.tex
+++ b/proposal/whyC.tex
@@ -1,1 +1,9 @@
-C is an imperative programming language. It was developed by Dennis Ritchie in 1972. C is still widely used by programmers through out the world. Its object oriented programming features inspired and lead to the development of languages such as C++ and Python. C programs have an elegant grammar. Hence, building a compiler for C will be useful in learning basic techniques and functionalities of compilers.
+C is an imperative programming language. It was developed by Dennis 
+Ritchie in 1972. C is still widely used by programmers through out the 
+world. Its object oriented programming features inspired and lead to 
+the development of languages such as C++ and Python. C programs have an 
+elegant grammar. Hence, building a compiler for C will be useful in 
+learning basic techniques and functionalities of compilers. Another 
+advantage with choosing C is that it is closer to the architecture
+of the system, which we believe would provide us lot of opportunities
+to optimise the compiler that we build.
