--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -45,4 +45,14 @@
     \input{whyC.tex}
     \section{Our Work}
     \input{work.tex}
+    \begin{thebibliography}{9}
+        \bibitem{C}
+        C (programming language), \url{https://en.wikipedia.org/wiki/C_(programming_language)}
+
+        \bibitem{ARM}
+        ARM Instruction Set, \url{https://developer.arm.com/architectures/instruction-sets}
+
+        \bibitem{Qemu}
+        QEMU, the Fast Processor Emulator, \url{https://www.qemu.org/}
+    \end{thebibliography}
 \end{document}
