--- a/proposal/whyC.tex
+++ b/proposal/whyC.tex
@@ -1,5 +1,5 @@
 C is an imperative programming language. It was developed by Dennis 
-Ritchie in 1972. C is still widely used by programmers through out the 
+Ritchie in 1972\cite{C}. C is still widely used by programmers through out the 
 world. Its object oriented programming features inspired and lead to 
 the development of languages such as C++ and Python. C programs have an 
 elegant grammar. Hence, building a compiler for C will be useful in 
