--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -21,16 +21,16 @@
 
 \runningtitle{A Basic Compiler For C}
 
+\title{A Basic Compiler For C}
+\author{Kshitij Gajapure}
+\affil{16110055}
+
+\author{Nisarg Ujjainkar}
+\affil{16110102}
+
+\author{S. Vinu Sankar}
+\affil{16110143}
 \begin{document}
-    \title{A Basic Compiler For C}
-    \author{Kshitij Gajapure}
-    \affil{16110055}
-
-    \author{Nisarg Ujjainkar}
-    \affil{16110102}
-
-    \author{S. Vinu Sankar}
-    \affil{16110143}
     \maketitle
     % \begin{abstract}
     %     Aim of this project is to implement a compiler for the 
@@ -45,6 +45,7 @@
     \input{whyC.tex}
     \section{Our Work}
     \input{work.tex}
+    %\bibliography{refer}
     \begin{thebibliography}{9}
         \bibitem{C}
         C (programming language), \url{https://en.wikipedia.org/wiki/C_(programming_language)}
